2009-11-03	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/configuration/switches_add.php,
	pf/html/admin/configuration/switches_edit.php: Fixed typo in switch
	definition in the Web Admin causing problems adding or editing a Cisco
	Catalyst 2970, 3500XL and wireless controller 4400. Fixes 836;
	http://www.packetfence.org/mantis/view.php?id=836

2009-11-02      Regis Balzard <rbalzard@inverse.ca>
	* pf/lib/pf/services.pm: Fixed missing library requirement when using
	PacketFence with routed VLANs

2009-11-02	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/html/admin/node/lookup.php, pf/lib/pf/lookup/node.pm, 
	pf/lib/pf/pfcmd/help.pm: Node lookup now gives information about IP
	and DHCP status (from iplog)
	Updated pfcmd's help
	Output in Web Admin is no longer right-aligned

	* pf/html/admin/common.php: Fixed alignment of the filter input dialog 

	* pf/lib/pf/SNMP.pm, pf/lib/pf/vlan.pm: Removed dead code, added POD
	doc, added TODO tasks

	* pf/NEWS, pf/conf/pf-release: bumped to 1.9.0dev

2009-10-30	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/packetfence.spec: Correctly pinned Parse::RecDescent dependency to
	version 1.94 which is known to work. Fixes #806;
	http://www.packetfence.org/mantis/view.php?id=806

2009-10-28	Olivier Bilodeau <obilodeau@inverse.ca>
	* pf/NEWS, pf/packetfence.spec: 1.8.5 ready

	* pf/lib/pf/services.pm: In conf/switches.conf uplink=dynamic is no
	longer case-sensitive. Fixes #831;
	http://packetfence.org/mantis/view.php?id=831

	* pf/lib/pf/violation.pm: performance: verifying if violation already 
	exists in violation_trigger. Improves performance in situation where 
	there are a lot of devices repetively generating violation (ex: blocked
	iPods) because we detect it before launching `pfcmd violation add`.
	Also decreased logging prority from WARN to INFO

	* pf/lib/pf/violation.pm: Tighter validation in violation_trigger when
	database query returns a non-empty array (which is a bigger problem yet
	to be identified)
