@@ -5,6 +5,13 @@ http://www.packetfence.org/
 Notes on upgrading from an older release
 ----------------------------------------
 
+o Upgrading from a version prior to <version>:
+
+    - Output of node lookup changed
+    The output of `pfcmd lookup node <mac>` changed. Make sure you update your 
+    parsing scripts (if any). This also affects the Node lookup section of the
+    Web Admin interface.
+
 o Upgrading from a version prior to 1.8.5:
 
     - 802.1X freeradius module updated 
